<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.projectkorra</groupId>
  <artifactId>projectkorra</artifactId>
  <version>1.11.2</version>
  <name>ProjectKorra</name>
  <repositories>
    <!-- local jar files, add more using: mvn install:install-file -Dfile=aaa.jar -DgroupId=aaa -DartifactId=aaa -Dversion=aaa -Dpackaging=jar -DlocalRepositoryPath=path/to/ProjectKorra/localrepo/ -->
    <repository>
      <id>project.local</id>
      <name>project</name>
      <url>file://${project.basedir}/localrepo/</url>
    </repository>
    <!-- WorldGuard and WorldEdit Repo -->
    <repository>
      <id>sk89q-repo</id>
      <url>https://maven.enginehub.org/repo/</url>
    </repository>
    <!-- GriefPrevention, Towny and SaberFactions Repo -->
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <!-- Bungee Repo -->
    <repository>
      <id>md_5-snapshots</id>
      <url>https://repo.md-5.net/content/repositories/snapshots/</url>
    </repository>
    <!-- Spigot Repo -->
    <repository>
      <id>spigot-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
    <!-- Aikars Repo -->
    <repository>
      <id>aikar</id>
      <url>https://repo.aikar.co/nexus/content/groups/aikar/</url>
    </repository>
    <!-- Paper Repo -->
    <repository>
      <id>papermc</id>
      <url>https://papermc.io/repo/repository/maven-public/</url>
    </repository>
    <!-- Placeholder API Repo -->
    <repository>
      <id>placeholderapi</id>
      <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
    </repository>
    <!-- GriefDefender API Repo -->
    <repository>
      <id>glaremasters</id>
      <url>https://repo.glaremasters.me/repository/bloodshot</url>
    </repository>
    <!-- LWC. Disabled for now because the repo is extremely unreliable and times out a lot -->
    <!--<repository>
      <id>ender-zone-repo</id>
      <url>https://ci.ender.zone/plugin/repository/everything/</url>
    </repository>-->
    <!-- RedProtect -->
    <repository>
      <id>redprotect-repo</id>
      <url>https://raw.githubusercontent.com/FabioZumbi12/RedProtect/mvn-repo/</url>
    </repository>
  </repositories>

  <dependencies>
    <!-- PaperLib -->
    <dependency>
      <groupId>io.papermc</groupId>
      <artifactId>paperlib</artifactId>
      <version>1.0.1</version>
    </dependency>
    <!-- Minecraft Timings -->
    <dependency>
      <groupId>co.aikar</groupId>
      <artifactId>minecraft-timings</artifactId>
      <version>1.0.4</version>
    </dependency>
    <!-- Spigot API -->
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>1.16.5-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <!-- lang3 -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.8.1</version>
    </dependency>
    <!-- SaberFactions -->
    <dependency>
      <groupId>com.github.SaberLLC</groupId>
      <artifactId>Saber-Factions</artifactId>
      <version>2.4.0-RC</version>
      <scope>provided</scope>
    </dependency>
    <!-- FactionsUUID -->
    <dependency>
      <groupId>com.github.drtshock</groupId>
      <artifactId>Factions</artifactId>
      <version>0.6.11</version>
      <scope>provided</scope>
    </dependency>
    <!-- GriefPrevention -->
    <dependency>
      <groupId>com.github.TechFortress</groupId>
      <artifactId>GriefPrevention</artifactId>
      <version>16.18</version>
      <scope>provided</scope>
    </dependency>
    <!-- LWC -->
    <dependency>
      <groupId>com.griefcraft</groupId>
      <artifactId>lwc</artifactId>
      <version>2.2.5</version>
      <scope>provided</scope>
    </dependency>
    <!-- NoCheatPlus -->
    <dependency>
      <groupId>fr.neatmonster</groupId>
      <artifactId>nocheatplus</artifactId>
      <version>3.16.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <!-- Lands -->
    <dependency>
      <groupId>com.github.angeschossen</groupId>
      <artifactId>LandsAPI</artifactId>
      <version>6.26.16</version>
      <scope>provided</scope>
    </dependency>
    <!-- Residence -->
    <dependency>
      <groupId>com.bekvon.bukkit</groupId>
      <artifactId>residence</artifactId>
      <version>5.0.1.0</version>
      <scope>provided</scope>
    </dependency>
    <!-- Towny -->
    <dependency>
      <groupId>com.github.TownyAdvanced</groupId>
      <artifactId>Towny</artifactId>
      <version>0.98.3.0</version>
      <scope>provided</scope>
    </dependency>
    <!-- WorldEdit / WorldGuard -->
    <dependency>
      <groupId>com.sk89q.worldedit</groupId>
      <artifactId>worldedit-core</artifactId>
      <version>7.0.0-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.sk89q.worldguard</groupId>
      <artifactId>worldguard-core</artifactId>
      <version>7.0.0-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.sk89q.worldedit</groupId>
      <artifactId>worldedit-bukkit</artifactId>
      <version>7.0.0-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.sk89q.worldguard</groupId>
      <artifactId>worldguard-legacy</artifactId>
      <version>7.0.0-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <!-- RedProtect -->
    <dependency>
      <groupId>br.net.fabiozumbi12.RedProtect</groupId>
      <artifactId>RedProtect-Core</artifactId>
      <version>7.7.2</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>br.net.fabiozumbi12.RedProtect</groupId>
      <artifactId>RedProtect-Spigot</artifactId>
      <version>7.7.2</version>
      <scope>provided</scope>
    </dependency>
    <!-- Kingdoms -->
    <dependency>
      <groupId>com.github.cryptomorin</groupId>
      <artifactId>kingdoms</artifactId>
      <version>1.13.9</version>
      <scope>provided</scope>
    </dependency>
    <!-- PlaceholderAPI -->
    <dependency>
      <groupId>me.clip</groupId>
      <artifactId>placeholderapi</artifactId>
      <version>2.9.2</version>
      <scope>provided</scope>
    </dependency>
    <!-- GriefDefender -->
    <dependency>
      <groupId>com.griefdefender</groupId>
      <artifactId>api</artifactId>
      <version>2.1.0-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>
  <build>
    <defaultGoal>clean package install</defaultGoal>
    <finalName>${project.name}-${project.version}</finalName>
    <sourceDirectory>${project.basedir}/src/</sourceDirectory>
    <resources>
      <resource>
        <targetPath>.</targetPath>
        <filtering>true</filtering>
        <directory>${project.basedir}/src/</directory>
        <includes>
          <include>*.yml</include>
        </includes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.1.1</version>
        <configuration>
          <outputDirectory>${dir}</outputDirectory>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.4</version>
        <configuration>
          <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
          <filters>

          </filters>
          <relocations>
            <relocation>
              <pattern>co.aikar.timings.lib</pattern>
              <shadedPattern>timingslib.projectkorra</shadedPattern>
            </relocation>
            <relocation>
              <pattern>io.papermc.lib</pattern>
              <shadedPattern>paperlib.projectkorra</shadedPattern>
            </relocation>
            <relocation>
              <pattern>org.apache.commons</pattern>
              <shadedPattern>commonslang3.projectkorra</shadedPattern>
            </relocation>
          </relocations>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <minimizeJar>true</minimizeJar>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <properties>
    <dir>${project.build.directory}</dir>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
</project>
